Add header prompt in HTML that is present before city is entered

--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
   </header>
   <main class="main-wrap">
     <aside>
-      <form>
-        <label for="city">Enter City Name</label>
-        <input id="city" type="text" value="">
-        <input type="submit" id="city-btn-js" value="Check The Weather">
-      </form>
-      <p id="city-input-js"></p>
+        <form>
+          <label for="city">Enter City Name</label>
+          <input id="city" type="text" value="">
+          <input type="submit" id="city-btn-js" value="Check The Weather">
+        </form>
     </aside>
     <section>
+      <h2 id="city-name-js">Let's check the weather!</h2>
       <ul class="weather-list">
-        <li>Placeholder test for styling</li>
-        <!-- OWM data goes here -->
+        <!-- OWM data rendered here -->
       </ul>
+      <h4></h4>
     </section>
   </main>
 
