Add line breaks in hard coded lines of text

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header class="hero">
     <h1>WeatherTalk</h1>
-    <h4>When distributed teams need to fill awkward conference-call silences, they count on WeatherTalk.</h4>
+    <h3>When distributed teams need to fill awkward conference-call silences,<br> they count on WeatherTalk.</h3>
   </header>
   <main class="main-wrap">
     <aside>
