Remove unused classes and tags

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <head>
   <title>WeatherTalk</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header class="hero">
+  <header>
     <h1>WeatherTalk</h1>
     <h3>When distributed teams need to fill awkward conference-call silences,<br> they count on WeatherTalk.</h3>
   </header>
@@ -24,7 +24,6 @@
       <ul class="weather-list">
         <!-- OWM data rendered here -->
       </ul>
-      <h4></h4>
     </section>
   </main>
 
