Add functionality for 'phrase generator'

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
       <ul class="weather-list">
         <!-- OWM data rendered here -->
       </ul>
+
+      <h4 id="phrase-helper-js"></h4>
     </section>
   </main>
 
